Added first draft of second assignment

--- a/segunda_entrega/refs.bib
+++ b/segunda_entrega/refs.bib
@@ -1,8 +1,9 @@
+
 @article{childs_terminology_2020,
   title = {A terminology for in situ visualization and analysis systems},
   volume = {34},
   issn = {1094-3420},
-  url = {https://doi.org/10.1177/1094342020935991},
+  doi = {10.1177/1094342020935991},
   abstract = {The term “in situ processing” has evolved over the last decade to
               mean both a specific strategy for visualizing and analyzing data
               and an umbrella term for a processing paradigm. The resulting
@@ -19,7 +20,6 @@
               currently used terms relate to the axes.},
   language = {en},
   number = {6},
-  urldate = {2023-08-08},
   journal = {The International Journal of High Performance Computing
              Applications},
   author = {Childs, Hank and Ahern, Sean D. and Ahrens, James and Bauer, Andrew
@@ -46,4 +46,148 @@
   file = {SAGE PDF Full Text:/Users/casch/Zotero/storage/YWS68KL7/Childs et al.
           - 2020 - A terminology for in situ visualization and
           analys.pdf:application/pdf},
+}
+
+@article{poursartip_large-scale_2020,
+  title = {Large-scale simulation of seismic wave motion: {A} review},
+  volume = {129},
+  issn = {0267-7261},
+  shorttitle = {Large-scale simulation of seismic wave motion},
+  doi = {10.1016/j.soildyn.2019.105909},
+  abstract = {We review key ingredients that are needed for high-fidelity
+              simulation of earthquake-generated seismic waves in large regions.
+              Specifically, we survey…},
+  language = {en-US},
+  journal = {Soil Dynamics and Earthquake Engineering},
+  author = {Poursartip, Babak and Fathi, Arash and Tassoulas, John L.},
+  month = feb,
+  year = {2020},
+  note = {Publisher: Elsevier},
+  pages = {105909},
+  file = {2020 - Large-scale simulation of seismic wave motion A
+          r.pdf:/Users/casch/Zotero/storage/W48K9CNL/2020 - Large-scale
+          simulation of seismic wave motion A
+          r.pdf:application/pdf;Snapshot:/Users/casch/Zotero/storage/G3MPUDAP/S0267726118314386.html:text/html
+          },
+}
+
+@article{mccallen_eqsimmultidisciplinary_2021,
+  title = {{EQSIM}—{A} multidisciplinary framework for fault-to-structure
+           earthquake simulations on exascale computers part {I}: {Computational}
+           models and workflow},
+  volume = {37},
+  issn = {8755-2930},
+  shorttitle = {{EQSIM}—{A} multidisciplinary framework for fault-to-structure
+                earthquake simulations on exascale computers part {I}},
+  doi = {10.1177/8755293020970982},
+  abstract = {Computational simulations have become central to the seismic
+              analysis and design of major infrastructure over the past several
+              decades. Most major structures are now “proof tested” virtually
+              through representative simulations of earthquake-induced response.
+              More recently, with the advancement of high-performance computing
+              (HPC) platforms and the associated massively parallel computational
+              ecosystems, simulation is beginning to play a role in increased
+              understanding and prediction of ground motions for earthquake
+              hazard assessments. However, the computational requirements for
+              regional-scale geophysics-based ground motion simulations are
+              extreme, which has restricted the frequency resolution of direct
+              simulations and limited the ability to perform the large number of
+              simulations required to numerically explore the problem parametric
+              space. In this article, recent developments toward an integrated,
+              multidisciplinary earth science-engineering computational framework
+              for the regional-scale simulation of both ground motions and
+              resulting structural response are described with a particular
+              emphasis on advancing simulations to frequencies relevant to
+              engineered systems. This multidisciplinary computational
+              development is being carried out as part of the US Department of
+              Energy (DOE) Exascale Computing Project with the goal of achieving
+              a computational framework poised to exploit emerging DOE exaflop
+              computer platforms scheduled for the 2022–2023 timeframe.},
+  language = {en},
+  number = {2},
+  journal = {Earthquake Spectra},
+  author = {McCallen, David and Petersson, Anders and Rodgers, Arthur and
+            Pitarka, Arben and Miah, Mamun and Petrone, Floriana and Sjogreen,
+            Bjorn and Abrahamson, Norman and Tang, Houjun},
+  month = may,
+  year = {2021},
+  note = {Publisher: SAGE Publications Ltd STM},
+  pages = {707--735},
+  file = {Full Text:/Users/casch/Zotero/storage/8WCDLXJD/McCallen et al. - 2021
+          - EQSIM—A multidisciplinary framework for
+          fault-to-s.pdf:application/pdf},
+}
+
+@inproceedings{mu_-situ_2019,
+  address = {New York, NY, USA},
+  series = {{PEARC} '19},
+  title = {In-situ {Analysis} and {Visualization} of {Earthquake} {Simulation}},
+  isbn = {978-1-4503-7227-5},
+  doi = {10.1145/3332186.3332201},
+  abstract = {Nowadays, numerical simulation has played a vital role in
+              analyzing and assessing earthquakes and their affects. Storage I/O
+              performance and network bandwidth have not kept pace with the
+              growth of computing power; as a result, post-processing has become
+              a bottleneck to end-to-end simulation performance. One approach to
+              solving this performance imbalance is to reduce the amount of
+              output data by implementing in-situ visualization, which constructs
+              the visualization concurrent with the simulation. In this paper, we
+              propose a new software utility named "awp-odc-insitu" that is based
+              on the well-known open-source seismic simulation software "
+              awp-odc-os" and capable of performing in-situ visualization
+              functionality by employing the open-source data analysis and
+              visualization application "ParaView" and its in-situ library "
+              ParaView Catalyst". Moreover, the paper discusses the
+              implementation of in-situ functionality and analyzes the
+              performance and efficiency of the "awp-odc-insitu" code to
+              demonstrate the code is of potential use in practical seismic
+              research.},
+  booktitle = {Proceedings of the {Practice} and {Experience} in {Advanced} {
+               Research} {Computing} on {Rise} of the {Machines} (learning)},
+  publisher = {Association for Computing Machinery},
+  author = {Mu, Dawei and Moran, Jon and Zhou, Hui and Cui, Yifeng and Hawkins,
+            Ronald and Tatineni, Mahidhar and Campbell, Steve},
+  month = jul,
+  year = {2019},
+  keywords = {earthquake simulation, in-situ, visualization},
+  pages = {1--5},
+  file = {Full Text PDF:/Users/casch/Zotero/storage/B9K9KGJM/Mu et al. - 2019 -
+          In-situ Analysis and Visualization of Earthquake S.pdf:application/pdf},
+}
+
+@article{akira_kageyama_approach_2014,
+  title = {An approach to exascale visualization: {Interactive} viewing of
+           in-situ visualization},
+  volume = {185},
+  doi = {10.1016/j.cpc.2013.08.017},
+  abstract = {Abstract In the coming era of exascale supercomputing, in-situ
+              visualization will be a crucial approach for reducing the output
+              data size. A problem of in-situ visualization is that it loses
+              interactivity if a steering method is not adopted. In this paper,
+              we propose a new method for the interactive analysis of in-situ
+              visualization images produced by a batch simulation job. A key idea
+              is to apply numerous (thousands to millions) in-situ visualizations
+              simultaneously. The viewer then analyzes the image database
+              interactively during postprocessing. If each movie can be
+              compressed to 100MB, one million movies will only require 100TB,
+              which is smaller than the size of the raw numerical data in
+              exascale supercomputing. We performed a feasibility study using the
+              proposed method. Multiple movie files were produced by a simulation
+              and they were analyzed using a specially designed movie player. The
+              user could change the viewing angle, the visualization method, and
+              the parameters interactively by retrieving an appropriate sequence
+              of images from the movie dataset.},
+  number = {1},
+  journal = {Computer Physics Communications},
+  author = {{Akira Kageyama} and Kageyama, Akira and {Tomoki Yamada} and Yamada,
+            Tomoki},
+  month = jan,
+  year = {2014},
+  doi = {10.1016/j.cpc.2013.08.017},
+  note = {MAG ID: 2069739090},
+  pages = {79--85},
+  file = {Akira Kageyama et al. - 2014 - An approach to exascale visualization
+          Interactive.pdf:/Users/casch/Zotero/storage/BY6A7WMT/Akira Kageyama et
+          al. - 2014 - An approach to exascale visualization
+          Interactive.pdf:application/pdf},
 }
