--- a/segunda_entrega/document.tex
+++ b/segunda_entrega/document.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage[T1]{fontenc}
 \usepackage[spanish]{babel}
-\usepackage{hyperref}
+\usepackage[colorlinks]{hyperref}
 \usepackage[a4paper, total={6.5in, 10in}]{geometry}
 \usepackage{csquotes}
 \usepackage[backend=biber]{biblatex}
