Worked on the problem

--- a/segunda_entrega/document.tex
+++ b/segunda_entrega/document.tex
@@ -14,22 +14,25 @@
 \maketitle
 
 \section{Tema de investigación}
- Para este proyecto se propone estudiar la aplicabilidad de bibliotecas de análisis y visualización in-situ en simulaciones sismológicas numéricas.
+ Para este proyecto se propone la aplicación de bibliotecas de análisis y visualización in-situ en simulaciones sismológicas numéricas.
 \section{Título propuesto}
 Construcción y evaluación de una extensión para una simulación símica numérica que permita el análisis y visualización in-situ.
 \section{Problema a resolver}
-El desarrollo de las supercomputadoras de exaescala ha traido nuevos retos. Por una parte, se ha incrementado el poder computacional disponible para la investigación científica, pero por otro lado no todos los componentes han tenido mejoras al mismo nivel. La introducción de cuellos de botella en los sistemas de entrada y salida (E/S) presenta un desafío para el aprovechamiento de los recursos, en particular a la hora de realizar análisis posteriores, como la creación de visualizaciones. Para atender a este problema se han propuesto distintas soluciones entre las que se encuentra el análisis y la visualización in-situ. \cite{akira_kageyama_approach_2014}
-Las simulaciones sísmicas son de gran interés ya que permiten suplementar los datos históricos para llegar a una mejor toma de decisiones a la hora de tomar decisiones de diseño a la hora de construir infraestructura. La literatura nos habla de seis campos en los que se pueden clasificar los trabajos de simulación sísmica \cite{poursartip_large-scale_2020}. Entre los estudios que hacen uso de simulaciones numéricas, se encunetra AWP-ODC. Esta simulación es escalable y hace uso del método de diferencias finitas. Este software fue extendido con la biblioteca de análisis y visualización in-situ, Catalyst, que está relacionada al software de visualización científica ParaView. Se encontró que la extensión de este software tuvo resultados aceptables de rendimiento (medido en GFLOPS), con respecto a la versión original, con el beneficio adicional de que la visualización se realizó de forma in-situ lo que permitió que la salida del programa fuera 444 veces menor que la del original \cite{mu_-situ_2019}. Este estudio muestra que la utilización de bibliotecas en simulaciones numéricas de sismología tiene resultados promisorios y beneficiosos para la investigación.
+Las simulaciones sísmicas son de gran interés ya que permiten suplementar los datos históricos para llegar a un mejor análisis a la hora de tomar decisiones de diseño y de construir infraestructura. La literatura nos habla de seis campos en los que se pueden clasificar los trabajos de simulación sísmica \cite{poursartip_large-scale_2020}. El modelado sísmico se ha visto beneficiado por el desarrollo de la computación de alto rendimiento (CAR) y de los sistemas de supercómputo. Un ejemplo de simulación que utiliza la CAR es AWP-ODC. Esta simulación es escalable y hace uso del método de diferencias finitas. Este software ha sido utilizado en para simular sismos de hasta magnitud 8 con una frecuencia de 2 Hz en el sur de California, en un área de 800 km por 400 km en computadoras de petaescala (que pueden llegar a calcular $10^{15}$ operaciones de punto flotante de 64 bits por segundo) \cite{Cui2010}.\\
+Hoy en día estamos ante la llegada de las supercomputadoras de exaescala (que pueden llegar a calcular $10^{18}$ operaciones de punto flotante de 64 bits por segundo), y esto ha traido nuevos retos. Por una parte, se ha incrementado el poder computacional disponible para la investigación científica, pero por otro lado no todos los componentes han tenido mejoras al mismo nivel. La introducción de cuellos de botella en los sistemas de entrada y salida (E/S) presenta un desafío para el aprovechamiento de los recursos, en particular a la hora de realizar análisis posteriores, como la creación de visualizaciones. Para atender a este problema se han propuesto distintas soluciones entre las que se encuentra el análisis y la visualización in-situ \cite{akira_kageyama_approach_2014}.\\
+Como un ejemplo, la simulación AWP-ODC fue extendida con la biblioteca de análisis y visualización in-situ, Catalyst. Se encontró que la extensión de este software tuvo resultados aceptables de rendimiento (medido en GFLOPS), con respecto a la versión original, con el beneficio adicional de que la visualización se realizó de forma in-situ lo que permitió que la salida del programa fuera 444 veces más pequeña en términos de almacenamiento que la del original \cite{mu_-situ_2019}. Este estudio muestra que la utilización de bibliotecas en simulaciones numéricas de sismología tiene resultados promisorios y beneficiosos para la investigación.\\
+Otro aspecto del análisis y visualización in-situ que trae beneficios para la ciencia es el direccionamiento computacional de las simulaciones. Tradicionalmente, el flujo de trabajo hacía que las visualizaciones y las métricas de la simulación sólo estaban disponibles después de esta ha terminado o alcanzado un checkpoint. El análisis y visualización in-situ permite que los resultados estén disponibles de forma constante durante la simulación, lo que le da la oportunidad a la persona investigadora de tomar decisiones anticipadas, como detener la simulación si esta empieza a diverger o a cambiar condiciones. Este tipo de interacción con simulaciones ya se ha llevado a cabo en otros dominios \cite{Yi2014}, y sería valioso para las simulaciones sísmicas.
+
 \section{Objetivos}
 \subsection{Objetivo general}
 Construir y evaluar una extensión usable, eficiente e introespectiva para una simulación sísmica numérica que permita el análisis y visualización in-situ de la misma.
 \subsection{Objetivos específicos}
-\begin{itemize}
+\begin{enumerate}
   \item Investigar simulaciones en otros dominios que hayan incorporado el análisis in-situ de forma satisfactoria.
   \item Diseñar una extensión usable, eficiente e introespectiva de análisis y visualización in-situ.
   \item Implementar una extensión usable, eficiente e introespectiva para la simulación utilizando la biblioteca escogida.
   \item Evaluar, optimizar y validar la extención implementada.
-\end{itemize}
+\end{enumerate}
 
 \section{Preguntas de investigación}
 ¿Cómo desarrollar una extensión usable, eficiente e introespectiva para una simulación sísmica numérica que utilice el análisis y visualización in-situ?
