--- a/segunda_entrega/refs.bib
+++ b/segunda_entrega/refs.bib
@@ -1,4 +1,32 @@
-
+@inproceedings{Yi2014,
+  author = {Yi, Hong and Rasquin, Michel and Fang, Jun and Bolotnov, Igor A.},
+  booktitle = {2014 IEEE International Conference on Big Data (Big Data)},
+  title = {In-situ visualization and computational steering for large-scale
+           simulation of turbulent flows in complex geometries},
+  year = {2014},
+  volume = {},
+  number = {},
+  pages = {567-572},
+  keywords = {Computational modeling;Data visualization;Data
+              models;Pipelines;Adaptation models;Visualization;Numerical models},
+  doi = {10.1109/BigData.2014.7004275},
+}
+@inproceedings{Cui2010,
+  author = {Cui, Yifeng and Olsen, Kim B. and Jordan, Thomas H. and Lee,
+            Kwangyoon and Zhou, Jun and Small, Patrick and Roten, Daniel and Ely,
+            Geoffrey and Panda, Dhabaleswar K. and Chourasia, Amit and Levesque,
+            John and Day, Steven M. and Maechling, Philip},
+  booktitle = {SC '10: Proceedings of the 2010 ACM/IEEE International Conference
+               for High Performance Computing, Networking, Storage and Analysis},
+  title = {Scalable Earthquake Simulation on Petascale Supercomputers},
+  year = {2010},
+  volume = {},
+  number = {},
+  pages = {1-20},
+  keywords = {Mathematical model;Computational
+              modeling;Equations;Earthquakes;Stress;Propagation;Numerical models},
+  doi = {10.1109/SC.2010.45},
+}
 @article{childs_terminology_2020,
   title = {A terminology for in situ visualization and analysis systems},
   volume = {34},
