--- a/segunda_entrega/refs.bib
+++ b/segunda_entrega/refs.bib
@@ -1,3 +1,33 @@
+@inproceedings{Grosset2020,
+  author = {Grosset, Pascal and Pulido, Jesus and Ahrens, James},
+  title = {Personalized In Situ Steering for Analysis and Visualization},
+  year = {2020},
+  isbn = {9781450388122},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3426462.3426463},
+  doi = {10.1145/3426462.3426463},
+  abstract = {In situ analysis is now commonly used in many simulations. Prior
+              to a simulation being run, the user specifies what in situ analysis
+              should be run and the results of that analysis are saved to disk
+              while the simulation is running. However, it is sometimes hard to
+              know what analysis to run before a simulation has started, and that
+              often results in the user saving full datasets to disk for analysis
+              later. In this paper, we present a framework, Seer, that allows
+              users to change, in real time, what in situ analysis to run.
+              Moreover Seer&nbsp;also allows many users to each run their own in
+              situ analysis, in a ”personalized workspace”, independent of each
+              other. Finally Seer&nbsp; can be easily integrated into simulations
+              and plays well with other in situ analysis frameworks, such as
+              ParaView Catalyst.},
+  booktitle = {ISAV'20 In Situ Infrastructures for Enabling Extreme-Scale
+               Analysis and Visualization},
+  pages = {1–6},
+  numpages = {6},
+  keywords = {visualization, in situ analysis, database, client-server},
+  location = {Atlanta, GA, USA},
+  series = {ISAV'20},
+}
 @inproceedings{Yi2014,
   author = {Yi, Hong and Rasquin, Michel and Fang, Jun and Bolotnov, Igor A.},
   booktitle = {2014 IEEE International Conference on Big Data (Big Data)},
