--- a/segunda_entrega/document.tex
+++ b/segunda_entrega/document.tex
@@ -18,10 +18,11 @@
 \section{Título propuesto}
 Construcción y evaluación de una extensión para una simulación símica numérica que permita el análisis y visualización in-situ.
 \section{Problema a resolver}
-Las simulaciones sísmicas son de gran interés ya que permiten suplementar los datos históricos para llegar a un mejor análisis a la hora de tomar decisiones de diseño y de construir infraestructura. La literatura nos habla de seis campos en los que se pueden clasificar los trabajos de simulación sísmica \cite{poursartip_large-scale_2020}. El modelado sísmico se ha visto beneficiado por el desarrollo de la computación de alto rendimiento (CAR) y de los sistemas de supercómputo. Un ejemplo de simulación que utiliza la CAR es AWP-ODC. Esta simulación es escalable y hace uso del método de diferencias finitas. Este software ha sido utilizado en para simular sismos de hasta magnitud 8 con una frecuencia de 2 Hz en el sur de California, en un área de 800 km por 400 km en computadoras de petaescala (que pueden llegar a calcular $10^{15}$ operaciones de punto flotante de 64 bits por segundo) \cite{Cui2010}.\\
-Hoy en día estamos ante la llegada de las supercomputadoras de exaescala (que pueden llegar a calcular $10^{18}$ operaciones de punto flotante de 64 bits por segundo), y esto ha traido nuevos retos. Por una parte, se ha incrementado el poder computacional disponible para la investigación científica, pero por otro lado no todos los componentes han tenido mejoras al mismo nivel. La introducción de cuellos de botella en los sistemas de entrada y salida (E/S) presenta un desafío para el aprovechamiento de los recursos, en particular a la hora de realizar análisis posteriores, como la creación de visualizaciones. Para atender a este problema se han propuesto distintas soluciones entre las que se encuentra el análisis y la visualización in-situ \cite{akira_kageyama_approach_2014}.\\
-Como un ejemplo, la simulación AWP-ODC fue extendida con la biblioteca de análisis y visualización in-situ, Catalyst. Se encontró que la extensión de este software tuvo resultados aceptables de rendimiento (medido en GFLOPS), con respecto a la versión original, con el beneficio adicional de que la visualización se realizó de forma in-situ lo que permitió que la salida del programa fuera 444 veces más pequeña en términos de almacenamiento que la del original \cite{mu_-situ_2019}. Este estudio muestra que la utilización de bibliotecas en simulaciones numéricas de sismología tiene resultados promisorios y beneficiosos para la investigación.\\
-Otro aspecto del análisis y visualización in-situ que trae beneficios para la ciencia es el direccionamiento computacional de las simulaciones. Tradicionalmente, el flujo de trabajo hacía que las visualizaciones y las métricas de la simulación sólo estaban disponibles después de esta ha terminado o alcanzado un checkpoint. El análisis y visualización in-situ permite que los resultados estén disponibles de forma constante durante la simulación, lo que le da la oportunidad a la persona investigadora de tomar decisiones anticipadas, como detener la simulación si esta empieza a diverger o a cambiar condiciones. Este tipo de interacción con simulaciones ya se ha llevado a cabo en otros dominios \cite{Yi2014}, y sería valioso para las simulaciones sísmicas.
+Las simulaciones sísmicas son de gran importancia, ya que complementan los datos históricos, mejorando así el análisis para la toma de decisiones en diseño e infraestructura. La literatura clasifica estos trabajos en seis campos distintos \cite{poursartip_large-scale_2020}. De interés para nuestro estudio son aquellos que utilizan métodos numéricos y computacionales para el modelado de sísmos, estas se han beneficiado del avance en la computación de alto rendimiento (CAR) y los sistemas de supercomputación. Un ejemplo es AWP-ODC, una simulación escalable que utiliza el método de diferencias finitas. Este software ha sido utilizado para simular sismos de hasta magnitud 8 con una frecuencia de 2 Hz en el sur de California, abarcando un área de 800 km por 400 km en computadoras de petaescala \cite{Cui2010}, capaces de realizar $10^{15}$ operaciones de punto flotante de 64 bits por segundo.\\
+La llegada de las supercomputadoras de exaescala, capaces de realizar $10^{18}$ operaciones de punto flotante de 64 bits por segundo, presenta nuevos desafíos. Si bien se ha incrementado el poder computacional para la investigación científica, algunos componentes no han evolucionado al mismo ritmo. Los cuellos de botella en los sistemas de entrada y salida (E/S) plantean un desafío para el aprovechamiento de recursos, especialmente en análisis posteriores como la creación de visualizaciones. Para abordar este problema se han propuesto soluciones, como el análisis y la visualización in-situ \cite{akira_kageyama_approach_2014}.\\
+Un ejemplo es la extensión de la simulación AWP-ODC con la biblioteca de análisis y visualización in-situ, Catalyst. Esta extensión demostró un rendimiento aceptable en comparación con la versión original, con la ventaja adicional de una visualización in-situ, lo que redujo significativamente el tamaño de almacenamiento de la salida del programa \cite{mu_-situ_2019}. Este estudio resalta los resultados prometedores y beneficiosos de utilizar bibliotecas en simulaciones numéricas de sismología para la investigación.\\
+Otro aspecto beneficioso del análisis y visualización in-situ es la capacidad de dirigir computacionalmente las simulaciones \cite{Grosset2020}. Tradicionalmente, las visualizaciones y métricas de simulación solo estaban disponibles después de que esta haya finalizado o alcanzado un punto de control. Sin embargo, el análisis y visualización in-situ permite que los resultados estén disponibles constantemente durante la simulación, lo que brinda a los investigadores la oportunidad de tomar decisiones anticipadas, como detener la simulación si comienza a divergir o si cambian las condiciones. Este tipo de interacción con las simulaciones se ha utilizado en otros dominios \cite{Yi2014} y sería valioso para las simulaciones sísmicas.\\
+Para este estudio se busca crear una extensión de una simulación existente que sea utilizable por investigadores en sismología, que tenga un rendimiento razonable y les dé la oportunidad de hacer dirección computacional de las simulaciones, validada con escenarios nacionales e internacionales.
 
 \section{Objetivos}
 \subsection{Objetivo general}
