Advanced with the intro

--- a/tercera_entrega/document.tex
+++ b/tercera_entrega/document.tex
@@ -20,6 +20,8 @@
 \usepackage[nameinlink, noabbrev, spanish]{cleveref}
 \usepackage{csquotes}
 \usepackage[backend=biber]{biblatex}
+\usepackage{graphicx}
+\graphicspath{{./images/}}
 \addbibresource{refs.bib}
 
 \begin{document}
@@ -29,8 +31,6 @@
 \pagenumbering{Roman}
 \addchap{Resumen}
 \tableofcontents
-\chapter{Introducción}
-\pagenumbering{arabic}
 
 \input{introduction}
 
