--- a/tercera_entrega/introduction.tex
+++ b/tercera_entrega/introduction.tex
@@ -1,21 +1,25 @@
+\chapter{Introducción}
+\pagenumbering{arabic}
 \section{Problema a resolver}
-Importancia de la sismología.
+La sismología es una ciencia reciente, que tiene sus inicios en las últimas décadas del siglo XIX \cite[2-3]{Shearer2019}. Cada día hay aproximadamente 50 temblores perceptibles en el mundo, por lo que es un fenómeno bastante común en el día a día. Las ondas mecánicas generadas por estos eventos nos pueden dar entendimiento sobre la composición de las capas internas de la tierra, las cuales no podemos observar directamente. Esto se utiliza, por ejemplo, en la búsqueda de yacimientos de petroleo. Adicionalmente, el conocer el comportamiento de las ondas generadas por temblores nos permite también detectar ondas artificiales, lo que da paso a la detección de pruebas nucleares \cite[1, 5, 8]{Shearer2019}.
 
-Importancia de las simulaciones sísmicas para la sismología.
+En la ciencia, el uso de simulaciones permite comparar modelos con datos observados, esto sirve para evaluar los ámbitos en los que el modelo puede ser o no válido. En la sismología, existen métodos clásicos como lo es la teoría de rayos y las soluciones modales, que siguen siendo útiles e importantes debido a que son menos costosas computacionalmente. Gracias al avance en hardware y software, se ha hecho posible la aplicación de métodos numéricos que permiten el cálculo de sismogramas sintéticos y la resolución de problemas tridimencionales \cite[1-2]{Igel2016}. Las simulaciones en sismología son de gran importancia, ya que complementan los datos históricos y esto ayuda a la investigación, y a la toma de decisiones en áreas como lo es el diseño y la infraestructura. Un ejemplo de simulación es AWP-ODC, esta simulación hace uso del método de diferencias finitas para resolver numéricamente las ecuaciones diferenciales del modelo. Este software fue utilizado en el 2010 para simular sismos de magnitud 8 con una frecuencia de 2 Hz en el sur de California, abarcando un área de 800 km por 400 km en computadoras de petaescala \cite{Cui2010}, capaces de realizar $10^{15}$ operaciones de punto flotante de 64 bits por segundo (FLOPS).
 
-Avance de las simulaciones sísmicas y las simulaciones numéricas.
+Desde 1993 se ha listado, de forma semestral, las 500 supercomputadoras más rápidas que existen en el TOP500. En la \cref{fig:top500} podemos ver el rendimiento en FLOPS de la computadora número 1 en cada listado desde 1993 hasta el 2024. En el 2008, la supercomputadora RoadRunner se convirtió en la primer computadora de petaescala, desde entonces se notaba que las unidades de entrada/salida (E/S) no estaban avanzando tan rápido como las unidades de procesamiento, por lo que podrían convertirse en cuellos de botella \cite{Narayan2009}. Ya desde el 2007 el departamento de energía de los Estados Unidos (DoE) se empezó a preparar para el desarrollo de las supercomputadoras de exaescala, montando talleres para identificar los beneficios y retos que iban a traer, como lo es la E/S y los requerimientos energéticos del mantenimiento y uso de estos sistemas \cite{Messina2017}. Se han propuesto múltiples soluciones a este problema, como lo es la E/S paralela \cite{Byna2022} o el análisis y visualización in-situ \cite{akira_kageyama_approach_2014}
 
-Avance de las supercomputadoras hasta llegar a la exaescala (TOP500?)
 
-Alto nivel del análisis y visualización in-situ.
+\begin{figure}[h]
+  \includegraphics[width=\textwidth]{top500}
+  \caption{Evolución del rendimiento de las supercomputadoras según el Top500\cite{top500}}
+  \label{fig:top500}
+\end{figure}
+
+Tradicionalmente, el postprocesamiento de los datos de simulación se realiza una vez que esta ha finalizado de ejecutarse, lo que llamamos un procesamiento post-hoc. En contraste, el análisis y visualización in-situ se refiere a realizar el procesamiento de los datos conforme son generados. Si los datos son procesados de forma local a la simulación, se puede evitar el escribirlos al disco por lo que es posible ahorrar tiempo en la E/S del sistema. Un ejemplo de esto es una versión de AWP-ODC que fue desarrollada con capacidades de análisis in-situ por medio de la biblioteca Catalyst. Esta versión del programa demostró un rendimiento aceptable en comparación a la versión original, con la ventaja adicional de haber reducido significativamente el tamaño de almacenamiento de la salida del programa \cite{mu_-situ_2019}. Este estudio resalta los resultados prometedores y beneficiosos de utilizar bibliotecas en simulaciones numéricas de sismología para la investigación.
 
 Importancia del análisis y visualización in-situ.
 
 Justificación del estudio.
 
-
-% Las simulaciones sísmicas son de gran importancia, ya que complementan los datos históricos, mejorando así el análisis para la toma de decisiones en diseño e infraestructura. La literatura clasifica estos trabajos en seis campos distintos \cite{poursartip_large-scale_2020}. De interés para nuestro estudio son aquellos que utilizan métodos numéricos y computacionales para el modelado de sísmos, estas se han beneficiado del avance en la computación de alto rendimiento (CAR) y los sistemas de supercomputación. Un ejemplo es AWP-ODC, una simulación escalable que utiliza el método de diferencias finitas. Este software ha sido utilizado para simular sismos de hasta magnitud 8 con una frecuencia de 2 Hz en el sur de California, abarcando un área de 800 km por 400 km en computadoras de petaescala \cite{Cui2010}, capaces de realizar $10^{15}$ operaciones de punto flotante de 64 bits por segundo.\\
-% La llegada de las supercomputadoras de exaescala, capaces de realizar $10^{18}$ operaciones de punto flotante de 64 bits por segundo, presenta nuevos desafíos. Si bien se ha incrementado el poder computacional para la investigación científica, algunos componentes no han evolucionado al mismo ritmo. Los cuellos de botella en los sistemas de entrada y salida (E/S) plantean un desafío para el aprovechamiento de recursos, especialmente en análisis posteriores como la creación de visualizaciones. Para abordar este problema se han propuesto soluciones, como el análisis y la visualización in-situ \cite{akira_kageyama_approach_2014}.\\
 % Un ejemplo es la extensión de la simulación AWP-ODC con la biblioteca de análisis y visualización in-situ, Catalyst. Esta extensión demostró un rendimiento aceptable en comparación con la versión original, con la ventaja adicional de una visualización in-situ, lo que redujo significativamente el tamaño de almacenamiento de la salida del programa \cite{mu_-situ_2019}. Este estudio resalta los resultados prometedores y beneficiosos de utilizar bibliotecas en simulaciones numéricas de sismología para la investigación.\\
 % Otro aspecto beneficioso del análisis y visualización in-situ es la capacidad de dirigir computacionalmente las simulaciones \cite{Grosset2020}. Tradicionalmente, las visualizaciones y métricas de simulación solo estaban disponibles después de que esta haya finalizado o alcanzado un punto de control. Sin embargo, el análisis y visualización in-situ permite que los resultados estén disponibles constantemente durante la simulación, lo que brinda a los investigadores la oportunidad de tomar decisiones anticipadas, como detener la simulación si comienza a divergir o si cambian las condiciones. Este tipo de interacción con las simulaciones se ha utilizado en otros dominios \cite{Yi2014} y sería valioso para las simulaciones sísmicas.\\
 % Para este estudio se busca crear una extensión de una simulación existente que sea utilizable por investigadores en sismología, que tenga un rendimiento razonable y les de la oportunidad de hacer dirección computacional de las simulaciones, validada con escenarios nacionales e internacionales.
