--- a/tercera_entrega/refs.bib
+++ b/tercera_entrega/refs.bib
@@ -248,3 +248,103 @@
           al. - 2014 - An approach to exascale visualization
           Interactive.pdf:application/pdf},
 }
+@book{Shearer2019,
+  title = "Introduction to seismology",
+  author = "Shearer, Peter M",
+  publisher = "Cambridge University Press",
+  edition = 3,
+  month = may,
+  year = 2019,
+  address = "Cambridge, England",
+  language = "en",
+}
+@book{Igel2016,
+  title = "Computational seismology",
+  author = "Igel, Heiner",
+  publisher = "Oxford University Press",
+  month = nov,
+  year = 2016,
+  address = "London, England",
+  language = "en",
+}
+@misc{top500,
+  author = {},
+  title = {{P}erformance {D}evelopment | {T}{O}{P}500 --- top500.org},
+  howpublished = {\url{https://www.top500.org/statistics/perfdevel/}},
+  year = {2024},
+  note = {[Accesado el 17-04-2024]},
+}
+@article{Messina2017,
+  author = {Messina, Paul},
+  journal = {Computing in Science \& Engineering},
+  title = {The Exascale Computing Project},
+  year = {2017},
+  volume = {19},
+  number = {3},
+  pages = {63-67},
+  keywords = {US Department of Energy;Security;Ecosystems;Mission critical
+              systems;High performance computing;Software
+              development;Exascale;co-design;HPC;scientific computing},
+  doi = {10.1109/MCSE.2017.57},
+}
+@article{Narayan2009,
+  author = {Narayan, Sumit},
+  title = {Supercomputers: past, present and the future},
+  year = {2009},
+  issue_date = {June 2009},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {15},
+  number = {4},
+  issn = {1528-4972},
+  url = {https://doi.org/10.1145/1558897.1558900},
+  doi = {10.1145/1558897.1558900},
+  journal = {XRDS},
+  month = {jun},
+  articleno = {3},
+  numpages = {4},
+}
+@inproceedings{Byna2022,
+  author = {Byna, Suren},
+  title = {Understanding Parallel I/O Performance and Tuning},
+  year = {2022},
+  isbn = {9781450393157},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3526064.3534114},
+  doi = {10.1145/3526064.3534114},
+  abstract = {Performance of parallel I/O is critical for large-scale scientific
+              applications to store and access data from parallel file systems on
+              high-performance computing (HPC) systems. These applications use
+              HPC systems often to generate and analyze large amounts of data.
+              They use the parallel I/O software stack for accessing and
+              retrieving data. This stack includes several layers of software
+              libraries - high-level I/O libraries such as HDF5, middleware
+              (MPI-IO), and low-level I/O libraries (POSIX, STD-IO). Each of
+              these layers have complex inter-dependencies among them that impact
+              the I/O performance significantly. As a result, scientific
+              applications frequently spend a large fraction of their execution
+              time in reading and writing data on parallel file systems. These
+              inter-dependencies also complicate tuning parallel I/O
+              performance.A typical parallel I/O performance tuning approach
+              includes collecting performance logs or traces, identifying
+              performance bottlenecks, attributing root causes, and devising
+              optimization strategies. Toward this systematic process, we have
+              done research in collecting Darshan traces for I/O, studying logs
+              on production supercomputing systems, attributing root cause
+              analysis by zooming into application I/O performance, visualizing
+              parallel I/O performance, and applying performance tuning.We will
+              introduce parallel I/O basics, I/O monitoring using various
+              profiling tools, analysis of logs collected on production class
+              supercomputers to identify performance bottlenecks, and application
+              of performance tuning options.We will also describe numerous
+              application use cases and performance improvements.},
+  booktitle = {Fifth International Workshop on Systems and Network Telemetry and
+               Analytics},
+  pages = {1–2},
+  numpages = {2},
+  keywords = {i/o performance, parallel file systems, parallel i/o, performance
+              tuning},
+  location = {Minneapolis, MN, USA},
+  series = {SNTA '22},
+}
